fix title fonts and some home spacings

--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -8,7 +8,7 @@ $menu-link-mobile: 1rem;
 
 $home-title-size: 1.5rem;
 
-$post-title-size: 2.3rem;
+$post-title-size: 1.9rem;
 
 $text-size-desktop: 1rem;
 $text-size-mobile: 1.1rem;
