--- a/css/main.scss
+++ b/css/main.scss
@@ -332,6 +332,7 @@ body {
     display: block;
     box-sizing: border-box;
     padding: 0;
+    padding-top: 18px;
 
     width: 100%;
     @include media-query(DESKTOP) {
